# open-king-bounty-cht

./: .gitignore  CONTEXT.md  CONTRIBUTORS.md  Makefile.in  PLAN.md  README.md  WORKLIST.md  configure.ac
.github/workflows/: build.yml
android-project/: README.md  setup.sh
android-project/overlay/: Android.mk  AndroidManifest.xml  Application.mk  OpenKBActivity.java  cfg-android.h  strings.xml
data/free/: ammi.txt  arec.txt  artifacts.ini  auri.txt  barg.txt  baro.txt  barr.txt  cane.txt  castles.ini  colors.ini  credits.txt  czar.txt  drea.txt  endlose.txt  endwin.txt  hack.txt  land.ini  land.org  land.tmx  magu.txt  mahk.txt  mora.txt  mury.txt  ragf.txt  rina.txt  signs.txt  spells.ini  towns.ini  troops.ini  tune00.ini  tune01.ini  tune05.ini  urth.txt  villains.ini
docker/: Dockerfile  Dockerfile.capture  Dockerfile.sdl2  build-appimage.sh  build-dist-all.sh  build-font.sh  build-sdl2-from-source.sh  build.sh  fetch-vendor.sh  playtest.sh  qa-hybrid.sh  qa-playtest.sh  screenshot.sh
docs/: ASSETS-PLAN.md  LESSONS.md  POSTMORTEM-cross-platform-startup.md  easter-eggs.md
docs/adr/: 0001-engine-and-cjk-approach.md
docs/android/: gen_mockups.py  ui-design.md
docs/baseline/: README.md
docs/reverse-engineering/: amiga-assets.md
docs/test/: GAME-TEST-REPORT.md
docs/translation/: glossary-draft.md
docs/video/: promo-description.md  promo-pipeline.md
scripts/: capture-promo.sh  make-promo.sh
src/: android.c  bgm.c  bgm.h  bounty.c  bounty.h  cjkfont.c  cjkfont.h  combat.c  env-sdl.c  env.h  game.c  inprint.c  main.c  play.c  play.h  rogue.c  save.c  sdlcompat.h  touch.c  touch.h  ui.c  ui.h
src/lib/: amiga-data.c  dos-cc.c  dos-cc.h  dos-data.c  dos-exe.c  dos-img.c  dos-snd.h  free-data.c  free-snd.c  free-snd.h  kbauto.c  kbauto.h  kbconf.c  kbconf.h  kbdir.c  kbfile.c  kbfile.h  kbres.c  kbres.h  kbsound.h  kbstd.c  kbstd.h  md-rom.c
src/tools/: Makefile  kbcc.c  kbcc2.c  kbmaped.c  kbrowse.c  kbtmx.py  kbview.c
tools/: amiga_batch.py  amiga_decode.py  amiga_disasm_dump.py  amiga_disasm_scan.py  amiga_hunks.py  amiga_relocs.py  build_cjk_font.py  find_callers.py  find_ptr.py  find_strings.py  refto.py
